--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
 
-APP_NAME='Finance Lend SaaS'
+APP_NAME='Mbc Finance'
 APP_ENV=local
-APP_KEY=base64:fNycuVakeGiyZmE2vU6QqeJjoCA4seNEMeE6dk+8Pc8=
-APP_DEBUG=false
+APP_KEY=base64:iv9RlPeIdtf+T+l4MfkrS0lrI3oqY66yx76ymlJ35ww=
+APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8001
+
+# Suppress PHP deprecation warnings
+LOG_DEPRECATIONS_CHANNEL=null
+ERROR_REPORTING="E_ALL & ~E_DEPRECATED"
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -31,4 +35,4 @@ MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_SECRET
